-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.6.0-beta1
-
Windows 10, Ubuntu 16.04, macOS 10.13
Steps to reproduce:
- Install Qt 5.10.1 android_armv7 binary from staging
- Install Qt Creator 4.6.0-beta1 from staging
- Launch Qt Creator 4.6.0-beta1
- Open, build and compile any Qt example
Expected result:
Deployment to Android device works
Actual result:
When trying to 'Run' the example, 'Cannot find the android build step' message is shown in Compile Output.
Couldn't reproduce this with the released Qt Creator 4.5.1.
For Gerrit Dashboard: QTCREATORBUG-19573 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
216287,2 | Android: Fix BuilConfiguration priority calculation | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |