Android: Fix BuilConfiguration priority calculation

Check the supported devices and return the base priority set by the
factory implementation

Task-number: QTCREATORBUG-19573
Change-Id: Ieae68a618d625b3f16f205e544f4626e6a410b91
Reviewed-by: hjk <hjk@qt.io>